# OCS2_ROS2_Custom

./: .dockerignore  .gitignore  .gitmodules  MUJOCO_LOG.TXT  README.md  build.sh  cv.tex  docker-compose.yml  frames_2026-04-13_11.53.59.gv  git-gp  joint_command_position.csv  joint_command_speed.csv  joint_command_torque.csv  mpc_ros2_gecis_notu.tex  mujoco_env.sh  play_quad_joystick.py  quad_mini_bridge_notes.tex  quad_mini_detailed_report.tex  quad_ocs2_project_report.tex  rebuild_controller_stack.sh  rebuild_motion.sh  rebuild_one_leg.sh  rebuild_quick.sh  rebuild_user_command.sh  rl_policy_contract_tr.tex  run.sh  run_one_leg  run_one_leg.sh  run_one_leg_rviz.sh  run_real_viewer.sh  run_viewer  run_viewer.sh  setup_quad.sh  sim_capture_b2_ms6_stand.csv  source_ws.sh  stm32_rl_handoff_tr.tex
docker/: Dockerfile  ros_entrypoint.sh
quad_mini_tuned/: CMakeLists.txt  package.xml  robot.urdf  robot_raw.urdf
quad_mini_tuned/src/: passive_mujoco_viewer.cpp
rebuild_tools/: rebuild_one_leg.sh  (+2 more)
src/Quadruped-Control-OCS2-ROS2/hardware_inter/: CMakeLists.txt  package.xml
src/Quadruped-Control-OCS2-ROS2/hardware_inter/launch/: kalman_state_rviz.launch.py  legged_control_rviz.launch.py  mujoco_state_rviz.launch.py
src/Quadruped-Control-OCS2-ROS2/hardware_inter/rviz/: kalman_state.rviz
src/Quadruped-Control-OCS2-ROS2/hardware_inter/scripts/: digitalTwin.py  sim2real.py
src/Quadruped-Control-OCS2-ROS2/hardware_interface/: CMakeLists.txt  package.xml
src/Quadruped-Control-OCS2-ROS2/hardware_interface/launch/: digitalTwin.launch.py  gui_digitalTwin.launch.py  kalman_state_rviz.launch.py  legged_control_rviz.launch.py  mujoco_state_rviz.launch.py  real2sim.launch.py  sim2real.launch.py
src/Quadruped-Control-OCS2-ROS2/hardware_interface/rviz/: kalman_state.rviz
src/Quadruped-Control-OCS2-ROS2/hardware_interface/scripts/: digitalTwin.py  gazebo_joint_effort_adapter.py  gui_status.py  joint_plotter.py  joint_status.py  motor_status.py  mpc_digital_twin.py  mujoco_to_joint_state.py  odom_relay.py  odom_to_path.py  odom_to_tf.py  read_to_csv.py  sensor_to_joint_state.py  sim2real.py  stand_comb.csv  state_to_odom.py  sttrot_comb.csv  test1.py  trot_comb.csv  trwalk0.15_comb.csv  walk0.3_comb.csv
src/Quadruped-Control-OCS2-ROS2/legged_control/gazebo_effort_controller/: CMakeLists.txt  gazebo_effort_controller_plugins.xml  package.xml
src/Quadruped-Control-OCS2-ROS2/legged_control/gazebo_effort_controller/include/gazebo_effort_controller/: joint_control_effort_controller.hpp
src/Quadruped-Control-OCS2-ROS2/legged_control/gazebo_effort_controller/src/: joint_control_effort_controller.cpp
src/Quadruped-Control-OCS2-ROS2/legged_control/motion_control/: CMakeLists.txt  package.xml
src/Quadruped-Control-OCS2-ROS2/legged_control/motion_control/src/: LeggedRobotControllerNode.cpp  LeggedRobotSqpMpcNode.cpp
src/Quadruped-Control-OCS2-ROS2/legged_control/motion_control/src/controller/: LeggedControllerRosInterface.cpp  MpcBackend.cpp  OrtCpuRunner.cpp  RlBackend.cpp
src/Quadruped-Control-OCS2-ROS2/legged_control/motion_control/src/legged_estimation/: EstimatorConfig.cpp  InvariantEkfEstimate.cpp  LinearKalmanFilter.cpp  StateEstimateBase.cpp  StateEstimatorFactory.cpp
src/Quadruped-Control-OCS2-ROS2/legged_control/motion_control/src/legged_interface/: LeggedRobotInterface.cpp
src/Quadruped-Control-OCS2-ROS2/legged_control/motion_control/src/legged_wbc/: WeightedWbc.cpp
src/Quadruped-Control-OCS2-ROS2/legged_control/motion_control/src/ros_interfaces/: GaitReceiver.cpp  MPC_WBC_ROS_Interface.cpp  RosReferenceManager.cpp
src/Quadruped-Control-OCS2-ROS2/legged_control/mujoco_simulator/: CMakeLists.txt  package.xml
src/Quadruped-Control-OCS2-ROS2/legged_control/mujoco_simulator/config/: visualize_urdf.rviz
src/Quadruped-Control-OCS2-ROS2/legged_control/mujoco_simulator/include/mujoco_simulator/: MujocoSimulation.hpp
src/Quadruped-Control-OCS2-ROS2/legged_control/mujoco_simulator/src/: MujocoSimulation.cpp  SimulatorNode.cpp
src/Quadruped-Control-OCS2-ROS2/legged_control/real_robot_bridge/: CMakeLists.txt  package.xml
src/Quadruped-Control-OCS2-ROS2/legged_control/real_robot_bridge/include/real_robot_bridge/: BackendBase.h  BridgeNodeBase.h  BridgeTypes.h  ContactEstimator.h  HardwareBackend.h  MujocoBackend.h
src/Quadruped-Control-OCS2-ROS2/legged_control/real_robot_bridge/src/: BridgeNodeBase.cpp  ContactEstimator.cpp  HardwareBackend.cpp  MujocoBackend.cpp  bridge_real_main.cpp  bridge_sim_main.cpp
src/Quadruped-Control-OCS2-ROS2/legged_control/user_command/: CMakeLists.txt  package.xml
src/Quadruped-Control-OCS2-ROS2/legged_control/user_command/config/a1/: reference.info  simulation.info  task.info
src/Quadruped-Control-OCS2-ROS2/legged_control/user_command/config/a1_custom/: gait.info  reference.info  simulation.info  task.info
src/Quadruped-Control-OCS2-ROS2/legged_control/user_command/config/b1/: task.info
src/Quadruped-Control-OCS2-ROS2/legged_control/user_command/config/b1_custom/: reference.info  simulation.info  task.info
src/Quadruped-Control-OCS2-ROS2/legged_control/user_command/models/: quad_mini_policy.onnx  quad_mini_rough_policy.onnx
src/Quadruped-Control-OCS2-ROS2/legged_control/user_command/src/: UserCommandNode.cpp
src/one_leg_pinocchio_control/: CMakeLists.txt  package.xml
src/one_leg_pinocchio_control/config/: one_leg_inverse_dynamics.yaml  one_leg_inverse_dynamics_go2.yaml
src/one_leg_pinocchio_control/launch/: one_leg_control_panel.launch.py  one_leg_inverse_dynamics.launch.py  one_leg_rviz.launch.py
src/one_leg_pinocchio_control/meshes/: fl_hipx.STL  fl_hipy.STL  fl_knee.STL  fr_hipx.STL  fr_hipy.STL  fr_knee.STL  hl_hipx.STL  hl_hipy.STL  hl_knee.STL  hr_hipx.STL  hr_hipy.STL  hr_knee.STL
src/one_leg_pinocchio_control/rviz/: one_leg.rviz
src/one_leg_pinocchio_control/scripts/: one_leg_control_gui.py  one_leg_state_to_model_joint_state.py
src/one_leg_pinocchio_control/src/: one_leg_inverse_dynamics_node.cpp
src/one_leg_pinocchio_control/urdf/: bacak_test_description.urdf  go2_one_leg.urdf  sample_one_leg.urdf
(+198 files in other folders)
