<?xml version="1.0"?>
<package format="3">
  <name>new_robot</name>
  <version>0.0.1</version>
  <description>URDF and mesh assets for the new_robot package.</description>

  <maintainer email="user@example.com">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ament_index_cpp</depend>
  <depend>glfw3</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
