<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>one_leg_pinocchio_control</name>
  <version>0.0.0</version>
  <description>Isolated one-leg Pinocchio inverse dynamics controller for joint_cmd testing.</description>
  <maintainer email="kaan@example.com">kaan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_python</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>pinocchio</depend>
  <depend>rcl_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>sensor_msgs</depend>
  <depend>stm2ros</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
