<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hardware_interface</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zafertncr66@gmail.com">zafer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_python</depend>
  <depend>diagnostic_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>mujoco_simulator</depend>
  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>trajectory_msgs</depend>
  <depend>xacro</depend>
  <depend>legged_msgs</depend>
  <depend>stm2ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
