<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>real_robot_bridge</name>
  <version>0.0.0</version>
  <description>Shared bridge layer for MuJoCo and real hardware backends.</description>
  <maintainer email="2805140006@qq.com">zhx</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>legged_msgs</depend>
  <depend>ocs2_core</depend>
  <depend>ocs2_centroidal_model</depend>
  <depend>ocs2_pinocchio_interface</depend>
  <depend>mujoco_simulator</depend>
  <depend>pinocchio</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
